[package]
name = "masonrystack-sdk"
version = "0.0.1"
edition = "2024"
description = "SDK crate for the MasonryStack platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/masonrystack"
readme = "README.md"
keywords = ["masonrystack", "platform"]
categories = ["development-tools"]

[dependencies]
